update /puzzle-cards route, refresh swagger docs
